Add progress bar for Pokémon data loading; enhance UI feedback